修复设备特殊方法为空时组件报错

--- a/src/ThingsGateway.Web.Page/Page/CollectVariablePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectVariablePage.razor
@@ -114,7 +114,7 @@
     StringNumber tab;
     List<CollectDevice> CollectDevices = new();
     List<UploadDevice> UploadDevices = new();
-    List<string> OtherMethods;
+    List<string> OtherMethods=new();
     void DeviceChanged(long devId)
     {
         if (devId > 0)
