OPC变量导入预测试

--- a/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
@@ -123,7 +123,7 @@
 
     List<DependencyProperty> GetDriverProperties(long driverId, long devId)
     {
-        return this.GetBackgroundService<CollectDeviceHostService>().GetDevicePropertysAsync(driverId, devId);
+        return this.GetBackgroundService<CollectDeviceHostService>().GetDevicePropertys(driverId, devId);
     }
     RenderFragment GetRenderFragment(CollectDeviceEditInput context)
     {
