--- a/src/ThingsGateway.Web.Page/Page/UploadDevicePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/UploadDevicePage.razor
@@ -123,7 +123,7 @@
 
     List<DependencyProperty> GetDriverProperties(long driverId, long devId)
     {
-        return this.GetBackgroundService<UploadDeviceHostService>().GetDevicePropertysAsync(driverId, devId);
+        return this.GetBackgroundService<UploadDeviceHostService>().GetDevicePropertys(driverId, devId);
     }
     RenderFragment GetRenderFragment(UploadDeviceEditInput context)
     {
