--- a/src/ThingsGateway.Web.Page/Page/DeviceStatusPage.razor
+++ b/src/ThingsGateway.Web.Page/Page/DeviceStatusPage.razor
@@ -269,18 +269,49 @@
         </style>
 
         <PModal @bind-Value="IsShowImportVariableList" OnCancel="() => IsShowImportVariableList = false"
-        Title=@T("导入变量") Height=@("750px") Persistent
-        MaxWidth="1500">
+        Title=@T("导入变量") Height=@("700") Persistent
+        MaxWidth="1500" OnSave="DownDeviceExport">
+    <ChildContent>
         @if (IsShowImportVariableList)
+        {
+            @_importRender
+        }
+    </ChildContent>
+
+
+    <SaveContent Context="save">
+        <MButton Text Color="primary" OnClick="save.Click" Disabled="isDownExport" Loading="isDownExport">
+            <MLabel>@T("导出Excel")</MLabel>
+        </MButton>
+    </SaveContent>
+    </PModal>
+
+
+
+    @code {
+
+    private bool isDownExport;
+    [Inject]
+    IJSRuntime JS { get; set; }
+    [Inject]
+    IVariableService VariableService { get; set; }
+    async Task DownDeviceExport()
     {
-        @_importComponent.Render()
+        try
+        {
+            var data = _importRef.GetVariableList();
+            isDownExport = true;
+            StateHasChanged();
+            using var memoryStream = await VariableService.ExportFile(data);
+            memoryStream.Seek(0, SeekOrigin.Begin);
+            using var streamRef = new DotNetStreamReference(stream: memoryStream);
+            await JS.InvokeVoidAsync("downloadFileFromStream", $"变量导出{DateTime.Now.ToString("MM-dd-HH-mm-ss")}.xlsx", streamRef);
+        }
+        finally
+        {
+            isDownExport = false;
+        }
     }
-
-</PModal>
-
-
-
-@code {
     StringNumber tab;
     private System.Timers.Timer DelayTimer;
     private bool fab;
@@ -304,10 +335,12 @@
         return base.OnInitializedAsync();
     }
     private BootstrapDynamicComponent _importComponent;
+    private RenderFragment _importRender;
+    private DriverUI _importRef;
 
     async Task ImportVaiable(long devId)
     {
-       var driver = this.GetBackgroundService<CollectDeviceHostService>().GetImportUI(devId);
+        var driver = this.GetBackgroundService<CollectDeviceHostService>().GetImportUI(devId);
         if (driver?.DriverUI == null)
         {
             await PopupService.EnqueueSnackbarAsync("插件未实现导入变量", AlertTypes.Warning);
@@ -318,6 +351,8 @@
                 [nameof(DriverUI.Driver)] = driver
             }
             );
+        _importRender = _importComponent.Render(a => _importRef = (DriverUI)a);
+
         IsShowImportVariableList = true;
     }
     async Task Restart(long devId)
