--- a/src/ThingsGateway.Web.Rcl/Shared/BaseLayout.razor
+++ b/src/ThingsGateway.Web.Rcl/Shared/BaseLayout.razor
@@ -4,7 +4,7 @@
 @implements IDisposable
 <CascadingValue Value="IsMobile" Name="IsMobile">
     <MApp>
-        <MErrorHandler ShowDetail>
+        <MErrorHandler >
             @Body
         </MErrorHandler>
     </MApp>
