!1 增加写入变量提示 * Blazor前端写入变量增加结果提示

--- a/src/ThingsGateway.Web.Page/Page/CollectVariableRunTimePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectVariableRunTimePage.razor
@@ -101,7 +101,15 @@
         $"输入变量{collectVariableRunTime.Name}的写入值");
         if (confirm != null)
         {
-            await rpcCore?.InvokeDeviceMethod($"BLAZOR-{UserResoures.CurrentUser.Account}-{App.HttpContext.Connection.RemoteIpAddress.MapToIPv4().ToString()}",  new NameVaue { Name = collectVariableRunTime.Name, Value = confirm  }, true);
+            var data=   await rpcCore?.InvokeDeviceMethod($"BLAZOR-{UserResoures.CurrentUser.Account}-{App.HttpContext.Connection.RemoteIpAddress.MapToIPv4().ToString()}",  new NameVaue { Name = collectVariableRunTime.Name, Value = confirm  }, true);
+            if(data.IsSuccess)
+            {
+                await InvokeAsync(async () => await PopupService.EnqueueSnackbarAsync(data.Message, AlertTypes.Success));
+            }
+            else
+            {
+                await InvokeAsync(async () => await PopupService.EnqueueSnackbarAsync(data.Message, AlertTypes.Warning));
+            }
         }
     }
 
