隐藏导航修复

--- a/src/ThingsGateway.Web.Rcl.Core/Shared/MainLayout.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
                          Items="Navs" />
         </MNavigationDrawer>
 
-        <MAppBar Style="left:200px;" Elevation="1" App Flat ClippedRight Dense ElevateOnScroll Color="barcolor"
+        <MAppBar Style=@($"{(!(IsMobile||!_drawerOpen)? "left:200px;":"")}") Elevation="1" App Flat ClippedRight Dense ElevateOnScroll Color="barcolor"
                  MaxHeight="@(UserResoures.Themes.LayoutPrpo.AppBarHeight)" Height="@(UserResoures.Themes.LayoutPrpo.AppBarHeight)">
             <MButton Class="mr-0" Icon Small=IsMobile OnClick=@(() => _drawerOpen = !_drawerOpen)>
                 <MIcon>mdi-menu</MIcon>
@@ -37,7 +37,7 @@
             </AppBarItems>
         </MAppBar>
 
-            <MMain Style="padding-left:200px;">
+            <MMain Style=@($"{(!(IsMobile||!_drawerOpen)? "padding-left:200px;":"")}")>
             <PageTabs>
                 <MDivider Center></MDivider>
                 <MCard Flat Class="overflow-y-auto overflow-x-hidden ma-auto pa-0 rounded-0" Style=@($"height: calc(100vh - {UserResoures.Themes.LayoutPrpo.AppBarHeight+UserResoures.Themes.LayoutPrpo.PageTabsHeight+UserResoures.Themes.LayoutPrpo.FooterBarHeight}px);")>
