--- a/src/ThingsGateway.Web.Rcl/BlazorApp.razor
+++ b/src/ThingsGateway.Web.Rcl/BlazorApp.razor
@@ -1,4 +1,5 @@
 @using System.Reflection;
+@using ThingsGateway.Web.Foundation;
 @inject NavigationManager NavigationManager
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(BlazorApp).Assembly" AdditionalAssemblies=@(GetAssemblys())>
@@ -29,12 +30,17 @@
     </Router>
 </CascadingAuthenticationState>
 @code {
+    [Inject]
+    IDriverPluginService DriverPluginService { get; set; }
     IEnumerable<Assembly> GetAssemblys()
     {
+        var plugins = DriverPluginService.GetCacheListAsync();
         var controllerTypes = App.EffectiveTypes.
     Where(u => !u.IsInterface && !u.IsAbstract && u.IsClass
     && u.IsDefined(typeof(Microsoft.AspNetCore.Components.RouteAttribute), false))
-    .Where(it => it.Assembly != typeof(BlazorApp).Assembly);
+    .Where(it => it.Assembly != typeof(BlazorApp).Assembly)
+    .Where(a => !(plugins.Select(b=>b.AssembleName).Contains(a.ToString())))
+    ;
         var assemblys = controllerTypes?.Select(it => it.Assembly)?.Distinct();
         return assemblys;
     }
