选择插件时自动更新属性

--- a/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
@@ -120,7 +120,19 @@
 
     List<DriverPluginCategory> DriverPlugins;
     StringNumber tab;
-
+    private async Task DriverValueChanged(CollectDeviceEditInput context, long pluginId)
+    {
+        if (pluginId > 0)
+            context.PluginId = pluginId;
+        if (context.PluginId > 0)
+        {
+            context.DevicePropertys = GetDriverProperties(context.PluginId, context.Id);
+            await PopupService.EnqueueSnackbarAsync("插件附加属性已更新", AlertTypes.Success);
+        }
+        else
+        {
+        }
+    }
     List<DependencyProperty> GetDriverProperties(long driverId, long devId)
     {
         return this.GetBackgroundService<CollectDeviceHostService>().GetDevicePropertys(driverId, devId);
@@ -145,7 +157,9 @@
                     <MTextField Dense Outlined HideDetails="@("auto")" @bind-Value=@context.Description />
 
                     <MSubheader Class="mt-4 font-weight-black">    @(typeof(CollectDeviceRunTime).GetDescription(nameof(CollectDeviceRunTime.PluginName)))  </MSubheader>
-                    <MCascader @bind-Value="context.PluginId" Class="mt-3 mr-3" Clearable
+
+                    <MCascader Value="context.PluginId" Class="mt-3 mr-3" Clearable TValue=long TItem="DriverPluginCategory"
+                           ValueChanged=@(a=>DriverValueChanged(context,a))
                            Items="DriverPlugins" ItemText="u => u.Name" ItemValue="u => u.Id" ItemChildren="u => u.Children"
                            MenuProps="@(props => { props.Auto = true; props.OffsetY = true; })"
                            ShowAllLevels="false" HideDetails="@("auto")" Height="30" Dense>
@@ -158,10 +172,10 @@
                     <MSubheader Class="mt-4 font-weight-black">    @(context.Description(x => x.IsLogOut))  </MSubheader>
                     <EnableSwitch @bind-Value=@context.IsLogOut />
 
-                    </MCard>
-                    </MTabItem>
-                    <MTabItem Value="2">
-                    <MCard Flat Class="ma-2">
+                </MCard>
+            </MTabItem>
+            <MTabItem Value="2">
+                <MCard Flat Class="ma-2">
                     <MButton Class="my-3" OnClick=@(async() =>
                          {
                          if(context.PluginId>0)
@@ -195,8 +209,9 @@
                 </MCard>
             </MTabItem>
         </MTabsItems>
-    </div>
+            </div>
     ;
         return renderFragment;
     }
+
 }
