--- a/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
+++ b/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
@@ -5,8 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ThingsGateway</title>
     <base href="/" />
 
