尝试修复中文在mac上乱码

--- a/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
+++ b/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
@@ -3,9 +3,9 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
-    <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThingsGateway</title>
     <base href="/" />
 
@@ -39,7 +39,7 @@
     <link href=@(BlazorConst.ResourceUrl+"TB.css") rel="stylesheet">
     
     <script src="_framework/blazor.server.js"></script>
-    <script src=@(BlazorConst.ResourceUrl+"js/jquery-3.5.1.js") type="text/javascript" charset="utf-8"></script>
+    <script src=@(BlazorConst.ResourceUrl+"js/jquery-3.5.1.js") type="text/javascript" charset="UTF-8"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 
 </body>
